<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
		android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical" >

    <TextView
        android:id="@+id/search_area_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_area_label" />

    <Spinner
        android:id="@+id/search_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/search_area_label" />

    <TextView
        android:id="@+id/search_start_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_start_label" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/search_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/search_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/search_end_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_end_label" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/search_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/search_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:id="@+id/search_title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_title_label" />

    <EditText
        android:id="@+id/search_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10" />

    <Button
        android:id="@+id/search_go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_go" />

	</LinearLayout>
	
</ScrollView>